--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="text-center">
          <img src="https://pokemoney.info/static/img/icon_logo.42bd8a8c.png">
          <div class="text-center">
-           <a href="https://margarineguildph.github.io/PokeMoney"><button style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" >PoKeMoney</button></a>
+           <a href="https://margarineguildph.github.io/pokemoney"><button style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" >PoKeMoney</button></a>
          </div>
         </div>
     </div>
