--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
                         <h4 style="color: var(--main-color);margin-top: -6px;">Total Teams</h4>
                     </div> -->
                     <div class="col-auto col-lg-4 text-center align-self-center pb-5 pt-5 love_counter">
-                        <h4 class="love_count" style="font-size: 70px;"><strong id="Tmem">1021</strong></h4>
+                        <h4 class="love_count" style="font-size: 70px;"><strong id="Tmem">1033</strong></h4>
                         <h4 style="color: var(--main-color);margin-top: -6px;">Telegram members</h4>
                     </div>
                     <div class="col-auto col-lg-4 text-center align-self-center pb-5 pt-5 love_counter">
-                        <h4 class="love_count" style="font-size: 70px;"><strong id="Dmem">898</strong></h4>
+                        <h4 class="love_count" style="font-size: 70px;"><strong id="Dmem">882</strong></h4>
                         <h4 style="color: var(--main-color);margin-top: -6px;">Discord members</h4>
                     </div>
                     <div class="col-auto col-lg-4 text-center align-self-center pb-5 pt-5 love_counter">
-                        <h4 class="love_count" style="font-size: 70px;"><strong id="Fmem">1714</strong></h4>
-                        <h4 style="color: var(--main-color);margin-top: -6px;">FaceBook members</h4>
+                        <h4 class="love_count" style="font-size: 70px;"><strong id="Fmem">1758</strong></h4>
+                        <h4 style="color: var(--main-color);margin-top: -6px;">Facebook members</h4>
                     </div>
                 </div>
             <div class="row justify-content-center features">
@@ -162,43 +162,8 @@
             <h3 class="text-center" style="color: var(--text-color);">Alerts</h3>
              <div class="alert">
                   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-                <strong>Beta Test</strong>
-            </div>
-        -->
-    <div class="karaCon">
-        <h2 class="text-center" style="color: var(--text-color);">KaraStar Contract</h2>
-        <div class="text-center">
-         <p class="contract" style="color: white;">&#8226;<img src="https://static.karastar.com/web/img/icon_01.69e24d48.png" width="50" height="50"> UMY: <p class="contract" style="color: white;" id="txtumy"><a href="https://www.coingecko.com/en/coins/karastar-umy" target="_blank">0x0522ecfE37ab2bdb5d60A99e08d1e8379bd35C00</a></p></p>
-         <p class="contract" style="color: white;">&#8226;<img src="https://static.karastar.com/web/img/icon_03.4a6536a1.png" width="50" height="50"> KARA: <p class="contract" style="color: white;" id="textkara"><a href="https://www.coingecko.com/en/coins/karastar" target="_blank">0x1e155e26085Be757780B45a5420D9f16a938f76b</a></p></p>
-         <p id="click">Click to redirect to <a href="https://www.coingecko.com/en">Coingecko</a></p>
-         <div class="text-center">
-           <button id="umyBtn" style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" onclick="copyUMY()">Copy UMY contract</button>
-           <button id="karaBtn" style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" onclick="copyKARA()">Copy KARA contract</button>
-           <script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
-<coingecko-coin-price-static-headline-widget  coin-ids="karastar-umy,karastar-kara" currency="php" locale="en" background-color="#000000"></coingecko-coin-price-static-headline-widget>
-         </div>
-        </div>
-    </div>
-    <hr class="hr1" class="nav-item smoothScroll shadow-none">
-    <div class="karaCon">
-        <h2 class="text-center" style="color: var(--text-color);">Other NFT games</h2>
-        <div class="text-center">
-         <img src="https://pokemoney.info/static/img/icon_logo.42bd8a8c.png">
-         <div class="text-center">
-           <a href="https://margarineguildph.github.io/pokemoney"><button style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" >PoKeMoney</button></a>
-         </div>
-        </div>
-    </div>
-   <hr class="hr1" class="nav-item smoothScroll shadow-none" id="ambassador">
-<!--    <div class="karaCon">
-        <h2 class="text-center" style="color: var(--text-color);">Ambassador Link</h2>
-        <div class="text-center">
-         <p class="contract" style="color: white;">&#8226; KMG Official Ambassador Link<p class="contract" style="color: white;" id="txtumy"><a href="https://events.gamefiplus.com/ambassador/?inviter=0x30DB059E6f239ee095335C301140F907C219DC0b">https://events.gamefiplus.com/ambassador/?inviter=0x30DB059E6f239ee095335C301140F907C219DC0b</a></p></p>
-         <p id="click"><i class="fa fa-warning" style="color:red; margin: 10px;"></i>AFTER SUCCESSFUL BINDING CLICK "GO TO MARKET"</p>
-        </div>
-    </div>-->
-
-            <div class="intro">
+                <strong>Beta Test</strong>-->
+                 <div class="intro">
                 <h2 class="text-center" style="color: var(--text-color);">Official Social Medias</h2>
             </div>
             </section>
@@ -315,6 +280,43 @@
     </div>
     <! --- to here :D -- >
   </div>
+
+            </div>
+        
+
+    <div class="karaCon">
+        <h2 class="text-center" style="color: var(--text-color);">KaraStar Contract</h2>
+        <div class="text-center">
+         <p class="contract" style="color: white;">&#8226;<img src="https://static.karastar.com/web/img/icon_01.69e24d48.png" width="50" height="50"> UMY: <p class="contract" style="color: white;" id="txtumy"><a href="https://www.coingecko.com/en/coins/karastar-umy" target="_blank">0x0522ecfE37ab2bdb5d60A99e08d1e8379bd35C00</a></p></p>
+         <p class="contract" style="color: white;">&#8226;<img src="https://static.karastar.com/web/img/icon_03.4a6536a1.png" width="50" height="50"> KARA: <p class="contract" style="color: white;" id="textkara"><a href="https://www.coingecko.com/en/coins/karastar" target="_blank">0x1e155e26085Be757780B45a5420D9f16a938f76b</a></p></p>
+         <p id="click">Click to redirect to <a href="https://www.coingecko.com/en">Coingecko</a></p>
+         <div class="text-center">
+           <button id="umyBtn" style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" onclick="copyUMY()">Copy UMY contract</button>
+           <button id="karaBtn" style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" onclick="copyKARA()">Copy KARA contract</button>
+           <script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
+<coingecko-coin-price-static-headline-widget  coin-ids="karastar-umy,karastar-kara" currency="php" locale="en" background-color="#000000"></coingecko-coin-price-static-headline-widget>
+         </div>
+        </div>
+    </div>
+    <hr class="hr1" class="nav-item smoothScroll shadow-none">
+    <div class="karaCon">
+        <h2 class="text-center" style="color: var(--text-color);">Other NFT games</h2>
+        <div class="text-center">
+         <img src="https://pokemoney.info/static/img/icon_logo.42bd8a8c.png">
+         <div class="text-center">
+           <a href="https://margarineguildph.github.io/pokemoney"><button style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" >PoKeMoney</button></a>
+         </div>
+        </div>
+    </div>
+   <hr class="hr1" class="nav-item smoothScroll shadow-none" id="ambassador">
+<!--    <div class="karaCon">
+        <h2 class="text-center" style="color: var(--text-color);">Ambassador Link</h2>
+        <div class="text-center">
+         <p class="contract" style="color: white;">&#8226; KMG Official Ambassador Link<p class="contract" style="color: white;" id="txtumy"><a href="https://events.gamefiplus.com/ambassador/?inviter=0x30DB059E6f239ee095335C301140F907C219DC0b">https://events.gamefiplus.com/ambassador/?inviter=0x30DB059E6f239ee095335C301140F907C219DC0b</a></p></p>
+         <p id="click"><i class="fa fa-warning" style="color:red; margin: 10px;"></i>AFTER SUCCESSFUL BINDING CLICK "GO TO MARKET"</p>
+        </div>
+    </div>-->
+
 </div></div>
 <!-- <div style="background-color: var(--background);"><div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-41.53,-9.56 C167.83,173.98 302.14,-60.89 534.09,89.10 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: var(--secondary);"></path></svg></div></div> -->
 <div id="feature" style="height: 90px;background: var(--secondary);"><!--<div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="var(--background)" fill-opacity="1" d="M0,96L40,112C80,128,160,160,240,144C320,128,400,64,480,48C560,32,640,64,720,69.3C800,75,880,53,960,58.7C1040,64,1120,96,1200,96C1280,96,1360,64,1400,48L1440,32L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg></div>--></div>
