--- a/pokemoney.html
+++ b/pokemoney.html
@@ -143,8 +143,8 @@
             </div>
            <!-- <p class="copyright" style="color: var(--text-color);padding: 0px;">
                 <!-Consider leaving this to give credit to me for making this, I worked hard on it and it makes me feel good :D->Have any suggestions? submit it&nbsp;<a href="https://forms.gle/GDhFJpUjcVZM5W687" style="color: var(--main-color);">here</a></p> -->
-            <p id="full-text" class="copyright" style="color: var(--text-color);"><a href="https://www.facebook.com/KarastarMargarine">KaraStarMargarine</a> © 2021 - 2022</p>
-            <p id="short-text" class="copyright" style="color: var(--text-color);"><a href="https://www.facebook.com/KarastarMargarine">KMG</a> © 2021 - 2022</p>
+            <p id="full-text" class="copyright" style="color: var(--text-color);"><a href="https://www.facebook.com/KarastarMargarine">Margarine Guild</a> © 2021 - 2022</p>
+            <p id="short-text" class="copyright" style="color: var(--text-color);"><a href="https://www.facebook.com/KarastarMargarine">MG</a> © 2021 - 2022</p>
             <!--<p class="copyright" style="color: var(--text-color);padding: 0px;">
                 <!-Consider leaving this to give credit to me for making this, I worked hard on it and it makes me feel good :D->Theme by&nbsp;<a href="https://itshoozi.com" style="color: var(--main-color);">itsHoozi</a></p>-->
         </div>
