--- a/pokemoney.html
+++ b/pokemoney.html
@@ -86,7 +86,7 @@
     </div>
     <hr width="100" style="opacity: 0;">
     <div class="accordion">
-        <h1 style="color: white;">Link:</h1>
+        <h1 style="color: white;">Get Started:</h1>
         <h3><a href="https://pokemoney.info/#/share?ref=0xf55cd7e9f786852a0c79a6faa00045d45658a848">https://pokemoney.info</a></h3>
         <hr width="50" style="opacity: 0;">
         <h1 style="color: white;">Guild Link:</h1>
@@ -99,6 +99,7 @@
         <iframe width="auto" height="auto" src="https://www.youtube.com/embed/3iMcGSV-L3M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <hr width="100" style="opacity: 0;">
+    <!--
     <div class="accordion d-xl-flex flex-column justify-content-xl-center align-items-xl-center">
         <hr width="50" style="opacity: 0;">
         <h3 style="color: white;">PoKeMoney Official Links</h3>
@@ -108,6 +109,7 @@
         <p>Linktree: <a href="https://linktr.ee/pokemoney_">https://linktr.ee/pokemoney_</a></p>
         <p>Telegram Group: <a href="https://t.me/+A740Nwan0Y02ZmVk">https://t.me/Pokemoney_Guild</a></p>
     </div>
+-->
     <! --- to here :D -- >
       </div>
     </div>
