--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
          </div>
         </div>
     </div>
-    <hr class="hr1" class="nav-item smoothScroll shadow-none">
+    <!--<hr class="hr1" class="nav-item smoothScroll shadow-none">
     <div class="karaCon">
         <h2 class="text-center" style="color: var(--text-color);">Other NFT games</h2>
         <div class="text-center">
@@ -307,7 +307,7 @@
            <a href="https://margarineguildph.github.io/pokemoney"><button style="margin: 10px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;" class="btn btn-primary shadow-none" >PoKeMoney</button></a>
          </div>
         </div>
-    </div>
+    </div>-->
    <hr class="hr1" class="nav-item smoothScroll shadow-none" id="ambassador">
 <!--    <div class="karaCon">
         <h2 class="text-center" style="color: var(--text-color);">Ambassador Link</h2>
